# qck

./: README.md  go.mod  main.go  turtle_image_converter.html
qck/: .gitignore  README.md  pyproject.toml
qck/models/: btc_ls_model.pkl  btc_model.pkl  btc_model_final.pkl  btc_model_v2.pkl  btc_model_v3.pkl  btc_model_v4.pkl  btc_money_maker.pkl  btc_pro_model.pkl  btc_production.pkl  run_signal.py
qck/src/qck_bot/: __init__.py  backtest.py  cli.py  config.py  data.py  deep_model.py  features.py  live.py  model.py
qck/src/qck_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
turtlify/: turtle_image_converter.html
