[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qck-bot"
version = "0.1.0"
description = "BTC short-term research bot using free Binance data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=12.0",
  "requests>=2.31",
  "scikit-learn>=1.3",
]

[project.scripts]
qck-bot = "qck_bot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
